<resources>

    <string name="places_api_key">AIzaSyBLf4XF6AC1wJONoWVE6rtwcpQZLl8pXnU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">873009302900995</string>
    <string name="fb_login_protocol_scheme">fb873009302900995</string>

    <!-- Sign In -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="find_email">이메일 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="signin_naver">Naver login</string>
    <string name="signin_kakao">Kakao login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your id and password</string>


    <string name="app_name">NOLLE</string>
    <string name="search">추천 텍스트를 입력하세요.</string>


</resources>
