<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:fillViewport="true"
    android:id="@+id/sv_root">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_Logo"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/nolle_login_logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayout_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imageView_Logo">

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayout_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textLayout_email">

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_Login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textLayout_password"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:theme="@style/ButtonStyle"
            android:background="@drawable/button_rectangle"/>


        <TextView
            android:id="@+id/textView_find_email"
            android:layout_below="@id/button_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@id/textView_find_password"
            android:layout_centerHorizontal="true"
            android:text="@string/find_email"
            android:textColor="#9F9F9F"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_Login"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:text="@string/find_password"
            android:textColor="#9F9F9F"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_Login"
            android:layout_toRightOf="@id/textView_find_password"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:text="@string/signup"
            android:textColor="#9F9F9F"
            android:textStyle="bold" />



    </RelativeLayout>

</ScrollView>
